tests/baselines/reference/FunctionDeclaration9_es6.errors.txt
tests/cases/conformance/es6/functionDeclarations/FunctionDeclaration9_es6.ts(1,10): error TS9001: Generators are not currently supported.
tests/cases/conformance/es6/functionDeclarations/FunctionDeclaration9_es6.ts(2,13): error TS9002: Computed property names are not currently supported.


==== tests/cases/conformance/es6/functionDeclarations/FunctionDeclaration9_es6.ts (2 errors) ====
    function * foo() {
             ~
!!! error TS9001: Generators are not currently supported.
      var v = { [yield]: foo }
                ~~~~~~~
!!! error TS9002: Computed property names are not currently supported.
    }